--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     padding: 15px;
 }
 
+.bt-default.active {
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+
 .card-header {
     display: flex;
     align-items: center;
@@ -2336,6 +2340,923 @@ body {
 }
 
 .card-heade-relacionamento > i {
-    font-size: 21px;
+    font-size: 18px;
+    color: #f79c51;
+}
+
+.group-buttons-relacionamento {
+    position: relative;
+    right: -57.5rem;
+}
+
+#button-refresh-relacionamento {
+    background-color: #fffefe;
+}
+
+#button-refresh-relacionamento > i {
+    opacity: 0.5;
+
+}
+
+.main-card-info-relacionamento {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+    box-sizing: border-box;
+    display: block;
+}
+
+.incommon-content {
+    height: 500px;
+    background-color: #f9f9f9;
+    box-sizing: border-box;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+
+}
+
+
+/*************** Containers de lista de endereços *******************/
+
+.main-card-lista_enderecos {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#Addresses {
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#Addresses > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+    width: 1215px
+}
+
+.card-heade-lista_enderecos {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+}
+
+.card-heade-lista_enderecos > h4 {
+    line-height: 0;
+    margin: 0;
+    color: #f79c51;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-weight: bold;
+}
+
+.card-heade-lista_enderecos > i {
+    font-size: 18px;
+    color: #f79c51;
+}
+
+.button-group-lista_enderecos {
+    position: relative;
+    right: -62.5rem;
+
+    display: flex;
+    gap: 0px;
+
+    vertical-align: middle;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+}
+
+.label-left-lista_enderecos, .label-right-lista_enderecos {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+
+    font-size: 14px;
+    padding: 2px 8px;
+    line-height: 20px;
+
+    margin-left: 0;
+    z-index: 2;
+    background-image: none;
+
+    color: #666;
+    background-color: #eaeaea;
+    border-radius: 2px;
+    font-weight: 400;
+
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-color: rgba(0,0,0,.07) rgba(0,0,0,.1) rgba(0,0,0,.18);
+    white-space: nowrap;
+    user-select: none;
+    text-rendering: auto;
+}
+
+.label-left-lista_enderecos > input, .label-right-lista_enderecos > input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+
+    margin: 4px 0 0;
+    line-height: normal;
+
+    box-sizing: border-box;
+    padding: 0;
+    font-size: 14px;
+    font-weight: 400;
+    color: #626262;
+    outline: none;
+
+    background-color: initial;
+    cursor: default;
+    appearance: auto;
+    border: initial;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-rendering: auto;
+    padding-block: 1px;
+    padding-inline: 2px;
+}
+
+
+.main-card-info-lista_enderecos {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+    box-sizing: border-box;
+    display: block;
+}
+
+.col-1-lista_enderecos {
+    border-color: #6a6e80;
+    border-bottom: 1px solid #e7e7e7;
+    padding: 5px 10px 7px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+    margin-bottom: -10px;
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.box-icon-lista_enderecos {
+    text-align: end;
+    display: flex;
+    align-items: end;
+
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    height: auto;
+    width: auto;
+}
+
+.icon {
+    text-align: center;
+    color: #424242;
+    display: block;
+    box-sizing: border-box;
+
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.231;
+}
+
+.icon-home-lista_enderecos {
+    width: 30px;
+    text-align: center;
+
+    font-size: 18px;
+    opacity: 1;
+    display: inline-block;
+    color: #424242;
+    box-sizing: border-box;
+    text-rendering: auto;
+}
+
+.icon-trophy-lista_enderecos {
+    position: relative;
+    bottom: -5px;
+    left: -16px;
+
+    opacity: 1;
+
+    display: inline-block;
+    font-size: inherit;
+    text-rendering: auto;
+
+    box-sizing: border-box;
+    text-align: center;
+    color: #424242;
+
+    font-size: 12px;
+    padding: 1px;
+    color: #eaa20e;
+    background-color: #fcecca;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.logradouro_box-lista_enderecos {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    display: block;
+
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+}
+
+.icon-gps-logradouro_box {
+    opacity: 1;
+    transition: opacity .1s ease-in;
+    text-align: center;
+    cursor: pointer;
+
+    color: #f6e442;
+    font-weight: bolder;
+
+    color: #eaa20e;
+    background-color: #fcecca;
+    padding: 1px;
+    border-radius: 50%;
+    font-size: small!important;
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+
+
+.logradouro_box-lista_enderecos > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+    box-sizing: border-box;
+
+    line-height: 1.231;
+    font-weight: 400;
+}
+
+.logradouro_box-lista_enderecos > strong {
+    font-size: 14px;
+    font-weight: 600;
+    text-overflow: ellipsis;
+    width: fit-content;
+    max-width: calc(100% - 5px);
+
+    margin-right: 25px;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    word-spacing: inherit !important;
+    height: 18px !important;
+}
+
+.top_container-lista_enderecos {
+    width: 100%;
+    display: flex;
+}
+
+.bottom_container-lista_endereços {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+
+.div_top-bottom_container {
+    display: flex;
+    margin-top: 6px;
+}
+
+.cep-container-lista_enderecos {
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+    width: 20%;
+}
+
+.cep-container-lista_enderecos > small, .cidade-container-lista_enderecos > small,
+.rank-container-lista_enderecos > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+}
+
+.cep-container-lista_enderecos > strong, .cidade-container-lista_enderecos > strong,
+.rank-container-lista_enderecos  > strong {
+    height: 18px;
+    font-size: 14px;
+    font-weight: 600;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: fit-content;
+    max-width: calc(100% - 5px);
+
+    margin-right: 25px;
+    color: #424242;
+    display: block;
+
+}
+
+
+.cidade-container-lista_enderecos {
+    width: 40%;
+    margin-bottom: 0;
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.rank-container-lista_enderecos {
+    width: 15%;
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+    box-sizing: border-box;
+}
+
+.telefone-container-lista_enderecos {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    width: 25%;
+}
+
+.menu_dropdown_icon {
+    position: relative;
+    bottom: 0px;
+    top: -6px;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    width: 5%;
+}
+
+.dropdown-neighbor {
+    display: inline-block;
+    vertical-align: top;
+
+    box-sizing: border-box;
+    text-align: top;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.dropdown-neighbor > button {
+    border-color: transparent;
+    background-color: transparent;
+    line-height: 17px;
+    margin-left: 0;
+
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    color: #626262;
+    outline: none;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 9px 12px;
+    user-select: none;
+    text-transform: none;
+    overflow: visible;
+    font: inherit;
+}
+
+.dropdown-neighbor > button > i {
+    font-size: 15px;
+    opacity: 1;
+    display: inline-block;
+    text-rendering: auto;
+
+    box-sizing: border-box;
+    color: #626262;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    text-transform: none;
+
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-indent: 0px;
+    text-shadow: none;
+}
+
+.dropdown-neighbor > button:hover {
+    background-color: #eceaea;
+}
+
+.dropdown-menu {
+    top: auto;
+    bottom: 100%;
+    margin-bottom: 1px;
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+
+    left: auto;
+    right: 0;
+    position: absolute;
+    z-index: 1000;
+    float: left;
+    min-width: 160;
+
+    list-style: none;
+    font-size: 13px;
+    background-color: #fff;
+
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    background-clip: padding-box;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+
+.dropdown-menu >  li {
+    box-sizing: border-box;
+    display: inline;
+    list-style: none;
+    font-size: 13px;
+    line-height: 1.231;
+    font-weight: 400;
+    color: #626262;
+    padding: 3px;
+}
+
+.dropdown-menu > li:hover {
+    background-color: #f5f3f3;
+    transition: 0.3s;
+    width: 100%;
+}
+
+.col-2-lista_enderecos {
+    padding: 5px 10px 7px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+    margin-top: 10px;
+    margin-bottom: -10px;
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.col-1-lista_enderecos:hover, .col-2-lista_enderecos:hover {
+    background-color: #d8d5d5;
+    transition: 0.3s;
+}
+
+
+/*************** Containers de lista de endereços comerciais *******************/
+
+.main-card-lista_enderecos_comerciais {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+
+#BusinessAddresses {
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#BusinessAddresses > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+    width: 1215px
+}
+
+.col-1-lista_enderecos-business {
+    padding: 5px 10px 7px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+    margin-bottom: -10px;
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.col-1-lista_enderecos-business:hover {
+    background-color: #d8d5d5;
+    transition: 0.3s;
+}
+
+.top_container-lista_enderecos-business {
+    width: 100%;
+    display: flex;
+}
+
+
+.box-icon-lista_enderecos-business {
+    text-align: end;
+    display: flex;
+    align-items: center;
+
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    height: auto;
+    width: auto;
+}
+
+.logradouro_box-lista_enderecos-business {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    display: block;
+
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+}
+
+.logradouro_box-lista_enderecos-business > small {
+    padding-left: 2px;
+    color: #424242;
+
+    font-size: 11px;
+    display: block;
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+}
+
+.logradouro_box-lista_enderecos-business > a {
+    color: #424242;
+    text-decoration: none;
+    cursor: pointer;
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.logradouro_box-lista_enderecos-business > a > sub {
+    white-space: nowrap;
+    overflow: hidden;
+    word-spacing: inherit;
+
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+    bottom: -0.25em;
+    cursor: pointer;
+    color: #424242;
+    font-weight: 400;
+}
+
+
+/*************** Containers de lista de Telefones *******************/
+
+
+.main-card-lista_telefones {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+.main-card-info-lista_telefones > div:hover {
+    background-color: #d8d5d5;
+    transition: 0.3s;
+}
+
+#Phones {
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#Phones > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+    width: 1215px
+}
+
+.card-heade-lista_telefones {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+}
+
+.card-heade-lista_telefones > h4 {
+    line-height: 0;
+    margin: 0;
+    color: #f79c51;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-weight: bold;
+}
+
+.card-heade-lista_telefones > i {
+    font-size: 15px;
+    color: #f79c51;
+}
+
+.main-card-info-lista_telefones {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+    box-sizing: border-box;
+    display: block;
+}
+
+.main-card-info-lista_telefones > div {
+    display: flex;
+    flex-direction: column;
+
+    background-color: #fbfbfb;
+    margin-top: 10px;
+
+
+    margin-left: -15px;
+    margin-bottom: -15px;
+    padding: 10px 15px 15px 15px;
+
+}
+
+.top-box-historico {
+
+    font-size: 10px;
+    display: block;
+    font-weight: 900;
+    line-height: 10px;
+    text-transform: uppercase;
+    color: #000;
+    margin-bottom: 5px;
+
+}
+
+.bottom-box-telefones {
+    width: 100%;
+}
+
+.main-container-lista_telefones {
+    margin-bottom: -10px;
+    display: flex;
+    flex-direction: row!important;
+    border: 0;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+}
+
+.icon-box-lista_telefones {
+    margin-bottom: 0;
+    width: 5%;
+    text-align: center;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    box-sizing: border-box;
+}
+
+.icon-box-lista_telefones > strong > i {
+    width: 30px;
+    text-align: center;
+    line-height: 17px;
+    font-size: 18px;
+
+    top: 1px;
+    display: inline-block;
+    font-style: normal;
+    font-weight: normal;
+}
+
+.telefone-box {
+    width: 40%;
+    margin-bottom: 0;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+
+}
+
+.telefone_list-group_box {
+    margin-top: 0;
+    width: 45%;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.sub_container-group_box-telefone-list{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+
+    margin-left: 8rem;
+
+    width: 70%;
+}
+
+
+.sub_container-group_box-telefone-list > i {
+    font-size: 20px;
+    width: 30px;
+    text-align: center;
+    line-height: 17px;
+
+    top: 1px;
+    display: inline-block;
+    font-style: normal;
+    font-weight: normal;
+}
+
+.rank-box {
+    width: 6%;
+}
+
+
+
+/*************** Containers de lista de email *******************/
+
+#Emails {
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#Emails > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+    width: 1215px
+}
+
+.icon-box-lista_emails {
+    margin-bottom: 0;
+    width: 5%;
+    text-align: center;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    box-sizing: border-box;
+}
+
+.lista_email-group_box {
+    margin-top: 0;
+    width: 40%;
+    display: flex;
+    margin-right: 55px;
+}
+
+
+/*************** Containers de processos de titulos *******************/
+
+
+.group-buttons-protestos_titulos {
+    position: relative;
+    right: -60.5rem;
+}
+
+.group-buttons-protestos_titulos > button {
+    background-color: rgb(234, 234, 234);
+}
+
+
+/*************** Containers de processos  *******************/
+
+#balance_list_process {
+    font-size: 20px;
     color: #f79c51;
 }
