--- a/Responsive/tabletResponsive_view.css
+++ b/Responsive/tabletResponsive_view.css
@@ -1,7 +1,6 @@
 
-       
-       /*MOBILE DADOS BÁSICOS RESPONSIVO*/
-        @media (min-width: 768px) and (max-width: 1024px) {
+    /*TABLET DADOS BÁSICOS RESPONSIVO*/
+    @media (min-width: 768px) and (max-width: 1024px) {
         .main-info_container{
             position: relative;
             box-sizing: border-box;
@@ -96,7 +95,7 @@
     
         .container-dados-sumarizados {
             display: block;
-            
+        
             max-width: 100%;
             width: 100%;
             break-inside: avoid-region!important;
@@ -107,7 +106,6 @@
         
         #dados-sumarizados {
             padding: 0!important;
-            width: 1000px;
             
         }
         
@@ -127,15 +125,15 @@
         .dado-sumarizado {
            cursor: pointer;
             
-           margin: 5px 43px;
-            max-width: 35%;
+           margin: 5px 13px;
+            max-width: 25%;
             width: 100%;
     
         }
     
     
         .email-sumarizado {
-        width: 650px;
+        width: 350px;
             background-color: #fcecca!important;
             color: #e19b0b!important;
         
@@ -162,7 +160,7 @@
         }
         .imoveis-sumarizado {
             height: 100%;
-            width: 650px;
+            width: 350px;
     
             display: flex;
             background-color: #c2d7f3!important;
@@ -189,7 +187,7 @@
         
         .telefones-sumarizado {
             height: 100%;
-            width: 650px;
+            width: 350px;
     
             display: flex;
             background-color: #d2eece!important;
@@ -216,7 +214,7 @@
         
         .enderecos-sumarizado {
             height: 100%;
-            width: 650px;
+            width: 350px;
     
             display: flex;
             background-color: #9fe3d2!important;
@@ -243,7 +241,7 @@
         
         .contatos-sumarizado {
             height: 100%;
-            width: 650px;
+            width: 350px;
     
             display: flex;
             background-color: #7c829d!important;
@@ -270,7 +268,7 @@
         
         .carros-sumarizado {
             height: 100%;
-            width: 650px;
+            width: 350px;
     
             display: flex;
             background-color: #efebfa!important;
@@ -731,8 +729,218 @@
     }/*TELEFONES*/
     
     
+    /*COMPORTAMENTO DIGITAL*/
+    #DigitalBehavior{
+        margin: 10px 15px;
+    }.box-1-dominio_box > .table{
+        margin: 10px 10px;
     
-        }
+    }.acessos-text-table{
+        position: relative;
+        right: 200px;
+        top: 55px;
+        font-weight: 100;
+    }.acessos_text_resposta-table{
+        position: relative;
+        margin: 100px 100px;
+        right: 200px;
+        top: 35px;
+        
+    }.ult_acesso-text-table{
+        position: relative;
+        right: 100px;
+        top: 55px;
+        display: block;
+        font-weight: 100;
+    }.ult_acesso_text_resposta-table{
+        position: relative;
+        right: 100px;
+        top: 35px;
+    }.box-2-comportamento_digital{
+        position: relative;
+        top: 30px;
+        width: 87%;
+    }.box-3-comportamento_digital h5{
+        position: relative;
+        top: 30px;
+    }/*ÚLTIMAS CONSULTAS*/
+    #Queries > div {
+        border-radius: 3px;
+        background-color: #fff;
+    
+        border: 1px solid #cccccc;
+        box-shadow: 0px 10px 7px -10px #b5b5b5;
+        box-sizing: border-box;
+    
+        position: relative;
+        left: 13px;
+        width: 350px;
+        height: 170px;
+    }.card-quantidade-consultas{
+        position: relative;
+        right: 255px;
+        top: 40px;
+    }.card-rank-consultas{
+        position: relative;
+        right: 120px;
+        top: 40px;
+    }
+    /*MODELO E ESTATISTICA*/
+    #StatisticModels > div {
+        border-radius: 3px;
+        background-color: #fff;
+    
+        border: 1px solid #cccccc;
+        box-shadow: 0px 10px 7px -10px #b5b5b5;
+        box-sizing: border-box;
+        width: 345px;
+        height: 1300px;
+        position: relative;
+        left: 19px;
+        
+    
+    }.rank_box-modelos_estatisticos{
+        position: relative;
+        right: 20px;
+    }.container-modelo_perfil_franqueado{
+        position: relative;
+        top: 0px;
+        margin: 10px 90px ;
+    }.box-content-modelos_estatiscos{
+        position: relative;
+        right: 20px;
+    }.perfil_tittle{
+        position: relative;
+        right: 80px;
+    }.container-modelo_perfil_franqueado small{
+        position: relative;
+        right: 80px;
+    
+    }.small-imovel{
+        position: relative;
+        left: 0px;
+    }.sub-imovel{
+        position: relative;
+        left: 0px;
+    }
+    
+    .small-comportamento{
+        position: relative;
+        left: 0px;
+    }.sub-comportamento{
+        position: relative;
+        left: 0px;
+    }
+    
+    .small-conta{
+        position: relative;
+        left: 0px;
+    }.sub-conta{
+        position: relative;
+        left: 0px
+    }
+    
+    .container-modelo_perfil_franqueado sub{
+        position: relative;
+        right: 80px;
+    
+    }.container-score-alterado{
+        position: relative;
+        left: 10px;
+        bottom: 10px;
+        /*buttom refresh local votação */
+    }.group-buttons-votacao {
+        position: relative;
+        right: -6.5rem;
+    }
+    
+    .group-buttons-votacao:hover {
+        background-color: #d8d5d5;
+        transition: 0.3s;
+    }.button-box{
+        position: relative;
+        right: -0rem;
+    
+        /*button situação cadastral*/
+    }#card-header-situacao_cadastral > button {
+        position: relative;
+        right: -6rem;
+        padding: 0 2px;
+        vertical-align: middle;
+        line-height: 0px;
+        font: inherit;
+        /*buttons relacionamento*/
+    }.group-buttons-relacionamento {
+        position: relative;
+        right: -3.5rem;
+    }/*buttons lista endereço*/
+    .button-group-lista_enderecos {
+        position: relative;
+        right: -9.5rem;
+        display: flex;
+        gap: 0px;
+        vertical-align: middle;
+        line-height: 1.231;
+        font-weight: 400;
+        font-size: 14px;
+        color: #626262;
+    }
+    /*icons lista telefone*/
+    
+    .telefone_list-group_box {
+        margin-top: 0;
+        width: 15%;
+        line-height: 100px;
+        font-weight: 400;
+        font-size: 10px;
+        color: #626262;
+        position: relative;
+        right: 500px;
+        bottom:30px;
+     
+    }/*icons email*/
+    .lista_email-group_box {
+        margin-top: 0;
+        width: 15%;
+        line-height: 100px;
+        font-weight: 400;
+        font-size: 10px;
+        color: #626262;
+        position: relative;
+        right: 510px;
+        bottom:20px;
+     
+    }/*icons imovel*/
+    .button-group-imoveis {
+        position: relative;
+        right: -8.5rem;
+        display: flex;
+        gap: 0px;
+        vertical-align: middle;
+        line-height: 1.231;
+        font-weight: 400;
+        font-size: 14px;
+        color: #626262;
+    }/*button refresh protesto*/
+    .group-buttons-protestos_titulos {
+        position: relative;
+        right: -3.5rem;
+    }
+    /*button dominios*/
+    .group-buttons-dominios {
+        position: relative;
+        right: -9.7rem;
+    }/*buttom comportamento digital*/
+    .group-buttons-comportamento_digital {
+        position: relative;
+        right: -3rem;
+    }
+    }
+    
+       
+    
+    
+        
     
             
     
